export enum AuditAction {
  CREATE = 'CREATE',
  UPDATE = 'UPDATE',
  DELETE = 'DELETE',
  LOGIN = 'LOGIN',
  IMPORT = 'IMPORT',
  EXPORT = 'EXPORT',
}
