export enum ClientStatut {
  ACTIF = 'ACTIF',
  PROSPECT = 'PROSPECT',
  INACTIF = 'INACTIF',
}
