export enum ClientType {
  APPORTEUR = 'APPORTEUR',
  ACHETEUR = 'ACHETEUR',
}
