export enum FactureStatut {
  GENEREE = 'GENEREE',
  ENVOYEE = 'ENVOYEE',
  TELECHARGE = 'TELECHARGE',
}
