export enum FactureType {
  PROFORMA = 'PROFORMA',
  DEFINITIVE = 'DEFINITIVE',
}
