export enum NotificationType {
  NOUVELLE_COLLECTE = 'NOUVELLE_COLLECTE',
  ACOMPTE_RECU = 'ACOMPTE_RECU',
  COMMANDE_PRETE = 'COMMANDE_PRETE',
  COMMANDE_FINALISEE = 'COMMANDE_FINALISEE',
  IMPORT_TERMINE = 'IMPORT_TERMINE',
  COMMANDE_EN_ATTENTE = 'COMMANDE_EN_ATTENTE',
}
